# myshell

./: .gitignore  CMakeLists.txt  cmdprocessor.cpp  cmdprocessor.h  historybuffer.cpp  historybuffer.h  historyprocessor.cpp  historyprocessor.h  main.cpp  mystring.cpp  mystring.h  pidvector.cpp  pidvector.h  stringutils.cpp  stringutils.h
myshelltests/: CMakeLists.txt  backgroundprocessor_test.cpp  backgroundprocessor_test.h  buffertests.cpp  byebyeprocessor_test.cpp  byebyeprocessor_test.h  processortests.cpp  startprocessor_test.cpp  startprocessor_test.h  startprocessortests.cpp  stringtests.cpp  terminateprocessor_test.cpp  terminateprocessor_test.h  terminateprocessortests.cpp
myshelltests/testclasses/: backgroundprocessor_test.cpp  backgroundprocessor_test.h  startprocessor_test.cpp  startprocessor_test.h  terminateprocessor_test.cpp  terminateprocessor_test.h
processors/: backgroundprocessor.cpp  backgroundprocessor.h  byebyeprocessor.cpp  byebyeprocessor.h  cmdprocessor.cpp  cmdprocessor.h  historyprocessor.cpp  historyprocessor.h  processorfactory.cpp  processorfactory.h  replayprocessor.cpp  replayprocessor.h  startprocessor.cpp  startprocessor.h  terminateprocessor.cpp  terminateprocessor.h
